Sistema de tv con CSS y JavaScript

--- a/dia_10/index.html
+++ b/dia_10/index.html
@@ -11,10 +11,21 @@
         <div class="screen-frame">
             <iframe id="tv_img" class="poweroff" src="" frameborder="0" allow="encrypted-media; gyroscope;" referrerpolicy="strict-origin-when-cross-origin"></iframe>
         </div>
-        <div class="controls">
-            <div id="b_play" class="controls-power"></div>
-            <div id="b_prev" class="controls-prev"></div>
-            <div id="b_next" class="controls-next"></div>
+        <div class="control-box">
+            <div class="controls">
+                <div id="b_play" class="controls-power"></div>
+                <div id="b_prev" class="button-square">
+                    <div class="left-arrow icon"></div>
+                </div>
+                <div id="b_next" class="button-square">
+                    <div class="right-arrow icon"></div>
+                </div>
+            </div>
+            <div class="speaker-box">
+                <div class="speaker-frame">
+
+                </div>
+            </div>
         </div>
     </div>
     <script src="controls.js"></script>
